Update FFmpegBridge.java